<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <ImageView
            android:id="@+id/imgProduit"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <TextView
            android:id="@+id/txtNom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imgProduit"
            app:layout_constraintTop_toTopOf="@id/imgProduit"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/txtPrix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/imgProduit"
            app:layout_constraintTop_toBottomOf="@id/txtNom" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toEndOf="@id/imgProduit"
            app:layout_constraintTop_toBottomOf="@id/txtPrix">

            <Button
                android:id="@+id/btnMoins"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/btn_moins" />

            <TextView
                android:id="@+id/txtQuantite"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:gravity="center" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:text="@string/btn_plus" />
        </LinearLayout>

        <Button
            android:id="@+id/btnRetirer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_retirer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/imgProduit" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
